--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
