--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
+    "jetifier": "^1.6.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
